# MonoCAM

./: .gitignore  CMakeLists.txt  Makefile  MonoCAM  app_utils.cc  app_utils.h  main.cpp  main.h  mono_cap.cc  mono_cap.h  monocam.cpp  monocam_ux.cc  monocam_ux.h  readme.md  resources.c  resources.gresource.xml
Tests/: apputils_test.cpp
